# git_info

./: CHANGELOG.md  Cargo.toml  Makefile.toml  README.md
benches/: bench_get.rs
docs/: index.html
docs/api/: aliases.js  crates.js  help.html  search-index.js  settings.html  source-files.js  src-files.js
docs/api/git_info/: all.html  fn.get.html  index.html  sidebar-items.js
docs/api/git_info/types/: index.html  sidebar-items.js  struct.GitInfo.html  struct.Head.html
docs/api/implementors/core/clone/: trait.Clone.js
docs/api/implementors/core/default/: trait.Default.js
docs/api/implementors/core/fmt/: trait.Debug.js
docs/api/implementors/core/marker/: trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js
docs/api/implementors/std/panic/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
docs/api/search.desc/git_info/: git_info-desc-0-.js
docs/api/src/git_info/: gitinfo.rs.html  lib.rs.html  types.rs.html
docs/api/trait.impl/core/clone/: trait.Clone.js
docs/api/trait.impl/core/default/: trait.Default.js
docs/api/trait.impl/core/fmt/: trait.Debug.js
docs/api/trait.impl/core/marker/: trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js
docs/api/trait.impl/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
examples/: example.rs
src/: gitinfo.rs  gitinfo_test.rs  lib.rs  lib_test.rs  types.rs  types_test.rs
tests/: get_test.rs
